src/objects/IEC_GDP_Replication__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Profile_IDs_with_Access__c</fullName>
        <defaultValue>&quot;00e20000000kvcd,00e20000001QMpc,00e20000000h0gF&quot;</defaultValue>
        <inlineHelpText>Profile IDs that has access to modify records synchronized with WebStar or AIMS (Comma separated with no spaces)</inlineHelpText>
        <label>Profile IDs with Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether the schedule is active or to be stopped on the next run</description>
        <label>Schedule Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Period__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Schedule Period (hr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Admin_Email__c</fullName>
        <defaultValue>&quot;debonol@iata.org&quot;</defaultValue>
        <label>System Admin Email</label>
        <type>Email</type>
    </fields>
    <label>IEC GDP Replication</label>
</CustomObject>